--- a/fylo-data-storage-component-master/style.css
+++ b/fylo-data-storage-component-master/style.css
@@ -57,15 +57,103 @@
   height: 100%;
 }
 
-#headroom {
+#bubble {
   height: 20%;
   background: transparent;
 }
 
-#content {
+.speech-bubble h1 {
+  margin: 0px;
+}
+
+.speech-bubble {
+  position: relative;
+  background: #ffffff;
+  border-radius: .4em;
+}
+
+.speech-bubble:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 80%;
+  width: 0;
+  height: 0;
+  border: 20px solid transparent;
+  border-top-color: #ffffff;
+  border-bottom: 0;
+  border-left: 0;
+  margin-left: -10px;
+  margin-bottom: -20px;
+}
+
+#lower-box {
   height: 80%;
   background: hsl(228, 56%, 26%);
   border-radius: 8px;
+  overflow: auto;
+}
+
+#content {
+  margin: 32px;
+  color: white;
+}
+
+#content h4 {
+  margin-top: 0px;
+  margin-bottom: 14px;
+  font-size: 14px;
+  font-family: Raleway;
+  font-style: medium 500;
+}
+
+.slidecontainer {
+  width: 100%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+#indicators {
+  display: flex;
+  justify-content: space-between;
+}
+
+#indicators h5 {
+  margin: 4px 0px;
+  font-size: 10px;
+  font-family: Raleway;
 }
 
 .attribution {
