--- a/coding-bootcamp-testimonials-slider-master/style.css
+++ b/coding-bootcamp-testimonials-slider-master/style.css
@@ -6,11 +6,15 @@
 
 body {
   font-family: "Inter", sans-serif;
+  height: 100%;
 }
 
 article {
   width: 80%;
-  margin: auto;
+  height: 100%;
+  margin: 2em auto;
+  overflow: auto;
+  padding-bottom: 14px;
 }
 
 .picture-arrows {
@@ -18,6 +22,14 @@ article {
   align-items: center;
   flex-direction: column;
   position: relative;
+}
+
+.pattern-bg {
+  position: absolute;
+  top: 4%;
+  margin: 0 auto;
+  width: 82%;
+  z-index: -1;
 }
 
 .img {
@@ -35,32 +47,65 @@ article {
 .arrow {
   padding: 6px;
   background-color: lightblue;
+  display: inline-block;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin-top: 3em;
+}
+
+.pattern-quotes {
+  width: 22%;
+  position: absolute;
+  top: -30px;
+}
+
+.quote {
+  font-weight: 300;
+  color: rgb(74, 22, 122);
+}
+
+.name-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1em;
+}
+
+.title {
+  color: rgba(74, 22, 122, 0.452);
+  font-size: 14px;
+  margin-top: 0.1em;
+}
+
+/* attribution */
+
+.full-hight {
 }
 
 .attribution {
+  height: 14px;
   font-size: 11px;
   padding: 8px;
   text-align: center;
-  position: absolute;
-  bottom: 0;
+  position: relative;
+  bottom: 8px;
   width: 100%;
+  margin-top: -14px;
+  clear: both;
 }
 
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
 
-.pattern-bg {
-  position: absolute;
-  top: 1%;
-  margin: 0 auto;
-  width: 80%;
-  z-index: -1;
-}
-
 .pattern-curve {
   position: absolute;
-  bottom: 0;
+  bottom: -30px;
   left: 0;
   width: 80vw;
   z-index: -1;
